--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -1,1 +1,21 @@
-//BU YERDA BUTTONLAR YASHAYDI
+.button{
+    
+        padding: 12px 24px;
+        background: #086CF9;
+        border-radius: 4px;
+        border: none;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #FFFFFF;
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+        transition: 0.3s;
+    &:hover{
+        opacity: 0.8;
+    }
+    &:active{
+        opacity: 0.4;
+    }
+}
