--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,1 +1,39 @@
-//BU YERDA SAYTIMIZNING HEADER QISMIGA ISHLOV BERILADI
+.header{
+    padding-top: 40px;
+    &__container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__logo{
+        padding: 0;
+        flex-shrink: 0;
+        transition: 0.3s;
+    }
+    &__logo:hover{
+        opacity: 0.8;
+    }
+    &__logo:active{
+        opacity: 0.4;
+    }
+    &__button{
+        padding: 12px 24px;
+        background: #086CF9;
+        border-radius: 4px;
+        border: none;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #FFFFFF;
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+        transition: 0.3s;
+    }
+    &__button:hover{
+        opacity: 0.8;
+    }
+    &__button:active{
+        opacity: 0.4;
+    }
+}
