--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,1 +1,44 @@
-//BU YERDA SYTIMIZNI HERO QISMIGA ISHLOV BERILADI
+.hero{
+    padding-bottom: 128px;
+    padding-top: 32px; 
+    background-image: url(../img/hero-bg.png);
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    background-size: 1520px 739px;
+    
+    &__box{
+        padding-top: 199px;
+        position: absolute;
+        margin-left: 104px;
+    }
+    &__heading{
+        margin: 0;
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 73px;
+        color: #FFFFFF;
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+        max-width: 971px;
+    }
+    &__desc{
+        padding-top: 24px;
+        max-width: 867px;
+        // height: 50px;
+        margin: 0;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 155%;
+        text-align: center;   
+        color: #FFFFFF;
+        flex: none;
+        order: 1;
+        flex-grow: 0;
+        padding-bottom: 54px;
+    }
+    &__button{
+        margin-left: 400px;
+    }
+ 
+}
