--- a/scss/blocks/_navbar.scss
+++ b/scss/blocks/_navbar.scss
@@ -1,1 +1,40 @@
-//BU YERDA SAYTIMIZNI NAVBAR QISMIGA ISHLOV BERILADI
+.navbar{
+    &__list{
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+    }
+    &__item + &__item {
+        margin-left: 40px;
+    }
+    &__link{
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 155%;
+        color: #222222;
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+        transition: 0.3s;
+    }
+    &__link:hover{
+        opacity: 0.8;
+    }
+    &__link:active{
+        opacity: 0.4;
+    }
+    &__link-contact{
+        padding-right: 112px;
+    }
+    &__link-sign{
+        padding-right: 48px;
+    }
+    &__link-home{
+        color: #086CF9;
+    }
+    &__select{
+        border: none;
+    }
+}
