find-your section

--- a/css/main.css
+++ b/css/main.css
@@ -523,4 +523,84 @@ img {
 }
 .hero__button {
   margin-left: 400px;
+}
+
+.card {
+  background: #FFFFFF;
+  box-shadow: 0px 11px 35px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+}
+.card__container {
+  max-width: 1138px;
+}
+.card__list {
+  display: flex;
+  align-items: center;
+}
+.card__item + .card__item {
+  margin-left: 155px;
+}
+.card__item {
+  display: flex;
+  align-items: center;
+}
+.card__box {
+  margin-left: 24px;
+}
+.card__desc {
+  padding-bottom: 8px;
+  margin: 0;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 47px;
+  color: #222222;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.card__link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 155%;
+  color: #086CF9;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  text-decoration: none;
+}
+
+.find-your {
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
+.find-your__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.find-your__box {
+  max-width: 519px;
+  margin-ri: 32px;
+}
+.find-your__desc {
+  margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  color: #333333;
+  padding-bottom: 32px;
+}
+.find-your__desc-little {
+  padding-bottom: 16px;
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 155%;
+  color: #555555;
+}
+.find-your__heading {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 62px;
+  color: #222222;
 }/*# sourceMappingURL=main.css.map */
